# RustWave

./: README.md
frontend/: TableSchema.md  package-lock.json  package.json
server/: .env.example  Cargo.toml  install.sh
server/src/auth/: jwt.rs
server/src/db/: connection.rs
