[package]
name = "rustwave-server"
version = "0.1.0"
edition = "2024"
authors = ["Sabique sabiqueislam@icloud.com"]
description = "A Rust-based ActivityPub engine that can plug into the Fediverse as a full-fledged social server."

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = { version = "0.8.6", features = ["macros", "multipart"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = "0.3.31"
governor = "0.10.1"
hex = "0.4.3"
jsonwebtoken = { version = "10.0", features = ["aws_lc_rs"] }
lettre = { version = "0.11.18", default-features = false, features = ["tokio1-rustls-tls"] }
mime = "0.3.17"
mime_guess = "2.0.5"
rand = "0.9.2"
regex = "1.11.3"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
rsa = { version = "0.9.8", features = ["sha2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate", "macros"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs", "trace", "cors", "compression-gzip"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.23.0"
tokio-test = "0.4.4"
